# adg

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  adg.doap  adg.pc.in  autogen.sh  config.h.in  configure.ac  cpml.pc.in  gtk-doc.make  meson.build  meson_options.txt
adg/: .gitignore  Makefile.am  adg-adim-private.h  adg-adim.c  adg-adim.h  adg-alignment-private.h  adg-alignment.c  adg-alignment.h  adg-arrow-private.h  adg-arrow-style-private.h  adg-arrow-style.c  adg-arrow-style.h  adg-arrow.c  adg-arrow.h  adg-canvas-private.h  adg-canvas.c  adg-canvas.h  adg-color-style-private.h  adg-color-style.c  adg-color-style.h  adg-container-private.h  adg-container.c  adg-container.h  adg-context-private.h  adg-context.c  adg-context.h  adg-dim-private.h  adg-dim-style-private.h  adg-dim-style.c  adg-dim-style.h  adg-dim.c  adg-dim.h  adg-dress-builtins.c  adg-dress-builtins.h  adg-dress-private.h  adg-dress.c  adg-dress.h  adg-edges-private.h  adg-edges.c  adg-edges.h  (+128 more)
adg/tests/: .gitignore  Makefile.am  test-adim.c  test-alignment.c  test-arrow.c  test-dim-style.c  test-dim.c  test-edges.c  test-entity.c  test-fill-style.c  test-font-style.c  test-internal.c  test-internal.h  test-line-style.c  test-marker.c  test-model.c  test-stroke.c  test-table.c  test-title-block.c  test-toy-text.c  test-widget.c
artwork/: adg-header.xcf  adg-logo.xcf  adg-welcome.xcf
autotools/: Makefile.am.common  Makefile.am.gtester  Translations.nsh  adg.nsi  minitheme-snapshot.tar.bz2  ntd.m4
cpml/: Makefile.am  cpml-action-intersection.c  cpml-action-join.c  cpml-action.c  cpml-action.h  cpml-alloca.h  cpml-arc.c  cpml-arc.h  cpml-close.c  cpml-close.h  cpml-curve.c  cpml-curve.h  cpml-extents.c  cpml-extents.h  cpml-internal.h  cpml-line.c  cpml-line.h  cpml-macros.c  cpml-macros.h  cpml-pair.c  cpml-pair.h  cpml-path.c  cpml-path.h  cpml-primitive-private.h  cpml-primitive.c  cpml-primitive.h  cpml-segment.c  cpml-segment.h  cpml-util.c  cpml-util.h  cpml.h
demo/: .gitignore  Makefile.am  adg-demo.c  adg-demo.ui  adg-demo.ui.in  adg-glade.in  adg.manifest  adg.rc  cpml-demo-gtk2.c  cpml-demo.c  cpml-demo.ui  cpml-demo.ui.in  cpml-test.c  demo.c  demo.h  ldim.c  meson.build
docs/: .gitignore  Makefile.am  adg-docs.xml  adg-sections.txt  adg.types  docbook2txt.xsl
docs/adg/: .gitignore  CONTRIBUTING.xml  HACKING.xml  Makefile.am  NEWS.xml  README.xml  TODO.xml  adg-docs.xml  adg-sections.txt  adg.types  bookinfo.xml.in  meson.build
docs/common/: devhelp2.xsl  gtk-doc.xsl  style.css
docs/cpml/: .gitignore  Makefile.am  bookinfo.xml.in  cpml-docs.xml  cpml-sections.txt  cpml.hierarchy.fake  meson.build
docs/gnu/: CONTRIBUTING.xml  NEWS.xml  README.xml  TODO.xml  docbook2txt.xsl
m4/: .gitignore  ChangeLog
nodist/: .gitignore  Dockerfile  Makefile  adg.mp  adg.xcf.bz2  baioca.tex  copyright  handcraft.tex  offset.tex  overview.tex  saiot.tex  symbols.mp
nodist/AdgText/: cr-text.c  cr-text.h  foo-canvas-text.c  foo-canvas-text.h  goocanvastext.c  (+2 more)
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  it.po  meson.build
po-properties/: .gitignore  ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  it.po
src/: .gitignore  Makefile.am  adg-1.pc.in  adg-gtk-1.pc.in  adg-gtk.h  adg.h  adg.h.in  adg.xml  config.h.meson  cpml-1.pc.in  cpml.h  meson.build
src/adg/: .gitignore  Makefile.am  adg-1.pc.in  adg-adim-private.h  adg-adim.c  adg-adim.h  adg-alignment-private.h  adg-alignment.c  adg-alignment.h  adg-arrow-private.h  adg-arrow.c  adg-arrow.h  adg-cairo-fallback.c  adg-cairo-fallback.h  adg-canvas-gtk.h  adg-canvas-private.h  adg-canvas.c  adg-canvas.h  adg-canvas.h.in  adg-color-style-private.h  adg-color-style.c  adg-color-style.h  adg-container-private.h  adg-container.c  adg-container.h  adg-dash-private.h  adg-dash.c  adg-dash.h  adg-dim-private.h  adg-dim-style-private.h  adg-dim-style.c  adg-dim-style.h  adg-dim.c  adg-dim.h  adg-dress-builtins.c  adg-dress-builtins.h  adg-dress-private.h  adg-dress.c  adg-dress.h  adg-edges-private.h  (+112 more)
src/adg-gtk/: .gitignore  Makefile.am  adg-gtk-area-private.h  adg-gtk-area.c  adg-gtk-area.h  adg-gtk-internal.h  adg-gtk-introspection.h  adg-gtk-layout-private.h  adg-gtk-layout.c  adg-gtk-layout.h  adg-gtk-marshal.genmarshal  adg-gtk-util.c  adg-gtk-util.h  adg-gtk-utils.c  adg-gtk-utils.h  adg-widget-private.h  adg-widget.c
src/adg-gtk/tests/: .gitignore  Makefile.am  test-gtk-area.c  test-gtk-layout.c  test-internal.c  test-internal.h  test-widget.c
src/adg/tests/: .gitignore  Makefile.am  meson.build  test-adim.c  test-alignment.c  test-arrow.c  test-canvas.c  test-color-style.c  test-container.c  test-dash.c  test-dim-style.c  test-dim.c  test-dress.c  test-edges.c  test-entity.c  test-fill-style.c  test-font-style.c  test-gtk-area.c  test-gtk-layout.c  test-gtk-utils.c  test-hatch.c  test-internal.c  test-internal.h  test-ldim.c  test-line-style.c  test-logo.c  test-marker.c  test-matrix.c  test-model.c  test-pango-style  test-pango-style.c  test-param-dress.c  test-path.c  test-point.c  test-projection.c  test-rdim.c  test-ruled-fill.c  test-stroke.c  test-style.c  test-table-cell.c  (+10 more)
src/cpml/: .gitignore  Makefile.am  cpml-1.pc.in  cpml-arc.c  cpml-arc.h  cpml-close.h  cpml-curve.c  cpml-curve.h  cpml-extents.c  cpml-extents.h  cpml-gobject.c  cpml-gobject.h  cpml-internal.h  cpml-introspection.h  cpml-line.c  cpml-line.h  cpml-pair.c  cpml-pair.h  cpml-primitive-private.h  cpml-primitive.c  cpml-primitive.h  cpml-segment.c  cpml-segment.h  cpml-util.c  cpml-util.h  cpml-utils.c  cpml-utils.h  meson.build
src/cpml/tests/: .gitignore  Makefile.am  meson.build  test-arc.c  test-curve.c  test-extents.c  test-gobject.c  test-internal.c  test-internal.h  test-pair.c  test-primitive.c  test-segment.c  test-utils.c
src/tests/: Makefile.am  adg-test.c  adg-test.h  meson.build
tests/: .gitignore  Makefile.am  adg-model.c  properties.c  test-alignment.c  test-container.c  test-edges.c  test-entity.c  test-internal.c  test-internal.h  test-model.c
