include $(top_srcdir)/build/Makefile.am.common

xml2txt_stylesheet=		$(abs_srcdir)/docs/docbook2txt.xsl
xml2txt_command=		$(AM_V_GEN)if test -x $(XSLTPROC) ; then : ; else \
				  echo ' *WARN  libxslt-1.0.19 or later is required to generate $@' ; \
				  touch $@ ; \
				  exit 0 ; \
				fi ; \
				$(XSLTPROC) --novalid -o $@ $(xml2txt_stylesheet)
ACLOCAL_AMFLAGS=		-I build
DISTCHECK_CONFIGURE_FLAGS=	--enable-pango \
				--enable-gtk-doc \
				--enable-test-framework \
				--enable-introspection \
				--with-gtk \
				--with-glade-catalogdir

BUILT_SOURCES=			ChangeLog \
				README \
				NEWS \
				TODO \
				CONTRIBUTING \
				HACKING

EXTRA_DIST=			COPYING \
				ChangeLog-0.2.1 \
				INSTALL \
				THANKS \
				adg.doap \
				build/configure-win32 \
				build/configure-win64 \
				build/adg-header.bmp \
				build/adg-welcome.bmp \
				build/adg.ico \
				build/gschemas.compiled \
				$(BUILT_SOURCES)
CLEANFILES=			test-report.xml \
				test-report.html \
				perf-report.xml \
				perf-report.html \
				full-report.xml \
				full-report.html

SUBDIRS=			src

if HAVE_GTK
SUBDIRS+=			demo
endif

SUBDIRS+=			po \
				po-properties \
				docs


if OS_WINDOWS

installer:
	$(MAKENSIS) build/adg.nsi

.phony: installer

endif


# Creating ChangeLog files from git log:
# idea stolen from cairo/build/Makefile.am.changelog
ChangeLog:
	$(AM_V_GEN)if test -d "$(abs_srcdir)/.git"; then \
	  ( cd "$(abs_srcdir)" && git log --stat > $@ ) ; \
	else \
	  echo ' *WARN  A git checkout is required to generate $@' ; \
	  touch $@ ; \
	fi

# Autogenerated text docs
README: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/README.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/README.xml

NEWS: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/NEWS.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/NEWS.xml

TODO: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/TODO.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/TODO.xml

CONTRIBUTING: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/CONTRIBUTING.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/CONTRIBUTING.xml

HACKING: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/HACKING.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/HACKING.xml
