include $(top_srcdir)/build/Makefile.am.common

xml2txt_stylesheet=		$(abs_srcdir)/docs/docbook2txt.xsl
xml2txt_command=		$(AM_V_GEN)if test -x $(XSLTPROC) ; then : ; else \
				  echo ' *WARN  libxslt-1.0.19 or later is required to generate $@' ; \
				  touch $@ ; \
				  exit 0 ; \
				fi ; \
				$(XSLTPROC) --novalid -o $@ $(xml2txt_stylesheet)
ACLOCAL_AMFLAGS=		-I build
AM_DISTCHECK_CONFIGURE_FLAGS=	--enable-pango \
				--enable-gtk-doc \
				--enable-test-framework \
				--enable-introspection \
				--with-gtk \
				--with-glade-catalogdir

BUILT_SOURCES=			ChangeLog \
				README \
				NEWS \
				TODO \
				CONTRIBUTING \
				HACKING

EXTRA_DIST=			COPYING \
				ChangeLog-0.2.1 \
				INSTALL \
				THANKS \
				adg.doap \
				build/configure-win32 \
				build/configure-win64 \
				build/adg-header.bmp \
				build/adg-welcome.bmp \
				build/adg.ico \
				build/gschemas.compiled \
				build/config.rpath \
				$(BUILT_SOURCES)
CLEANFILES=			test-report.xml \
				test-report.html \
				perf-report.xml \
				perf-report.html \
				full-report.xml \
				full-report.html

SUBDIRS=			src

if HAVE_GTK
SUBDIRS+=			demo
endif

SUBDIRS+=			po \
				docs


if OS_WINDOWS

INSTALLER=adg-$(PACKAGE_VERSION)-win$(PACKAGE_ARCH).exe

installer: $(INSTALLER)

.phony: installer

# The installer needs the docs but the MinGW toolchain does not have
# gtk-doc installed. Issue #148: http://dev.entidi.com/p/adg/issues/148/
_host/docs/adg/html/index.html:
	-mkdir _host ; \
	cd _host && \
	$(abs_srcdir)/configure \
		--prefix= \
		--disable-dependency-tracking \
		--disable-fast-install \
		--disable-nls \
		--disable-introspection \
		--disable-test-framework \
		--without-glade-catalogdir \
		--enable-gtk-doc \
		--enable-gtk-doc-html \
		--enable-gtk-doc-pdf && \
	make -j7 ; \
	cd ..

clean-local:
	-rm -fr _host

$(INSTALLER): _host/docs/adg/html/index.html
	$(MAKENSIS) -NOCD $(srcdir)/build/adg.nsi

mostlyclean-local:
	-rm $(INSTALLER)

endif


# Creating ChangeLog files from git log:
# idea stolen from cairo/build/Makefile.am.changelog
ChangeLog:
	$(AM_V_GEN)if test -d "$(abs_srcdir)/.git"; then \
	  ( cd "$(abs_srcdir)" && git log --stat > $@ ) ; \
	else \
	  echo ' *WARN  A git checkout is required to generate $@' ; \
	  touch $@ ; \
	fi

# Autogenerated text docs
README: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/README.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/README.xml

NEWS: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/NEWS.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/NEWS.xml

TODO: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/TODO.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/TODO.xml

CONTRIBUTING: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/CONTRIBUTING.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/CONTRIBUTING.xml

HACKING: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/HACKING.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/HACKING.xml
