include $(top_srcdir)/build/Makefile.am.common

xml2txt_stylesheet=		$(abs_srcdir)/docs/docbook2txt.xsl
xml2txt_command=		$(AM_V_GEN)if test -x $(XSLTPROC) ; then : ; else \
				  echo ' *WARN  libxslt-1.0.19 or later is required to generate $@' ; \
				  touch $@ ; \
				  exit 0 ; \
				fi ; \
				$(XSLTPROC) --novalid -o $@ $(xml2txt_stylesheet)
hicolor_snapshot=		build/hicolor-snapshot-0.11.tar.bz2
minitheme_snapshot=		build/minitheme-snapshot.tar.bz2
ACLOCAL_AMFLAGS=		-I build
ADG_DIST_CONFIGURE_FLAGS=	--enable-pango \
				--with-gtk=gtk3 \
				--enable-gtk-doc \
				--enable-gtk-doc-html
AM_DISTCHECK_CONFIGURE_FLAGS=	$(ADG_DIST_CONFIGURE_FLAGS) \
				--enable-test-framework \
				--enable-introspection \
				--with-glade-catalogdir \
				--with-girdir='$$(datadir)/gir-1.0' \
				--with-typelibdir='$$(libdir)/girepository-1.0'

BUILT_SOURCES=			ChangeLog \
				README \
				NEWS \
				TODO \
				CONTRIBUTING \
				HACKING

EXTRA_DIST=			COPYING \
				ChangeLog-0.2.1 \
				INSTALL \
				THANKS \
				adg.doap \
				build/config.rpath \
				build/build-win32 \
				build/build-win64 \
				build/adg.nsi \
				build/adg-header.bmp \
				build/adg-welcome.bmp \
				build/adg.ico \
				build/gschemas.compiled \
				build/settings.ini \
				$(hicolor_snapshot) \
				$(minitheme_snapshot) \
				build/minitheme-snapshot.tar.bz2 \
				$(BUILT_SOURCES)
CLEANFILES=			test-report.xml \
				test-report.html \
				perf-report.xml \
				perf-report.html \
				full-report.xml \
				full-report.html

SUBDIRS=			src

if HAVE_GTK
SUBDIRS+=			demo
endif

SUBDIRS+=			po \
				docs


if OS_WINDOWS

INSTALLER=adg-$(PACKAGE_VERSION)-win$(PACKAGE_ARCH).exe

installer: $(INSTALLER)

_host:
	mkdir _host

# The installer needs the docs but the MinGW toolchain does not have
# gtk-doc installed. Issue #148: http://dev.entidi.com/p/adg/issues/148/
_host/docs/adg/adg.pdf: _host $(srcdir)/configure
	cd _host ; \
	$(abs_srcdir)/configure \
		$(ADG_DIST_CONFIGURE_FLAGS) \
		--prefix= \
		--disable-dependency-tracking \
		--disable-fast-install \
		--disable-nls \
		--disable-introspection \
		--disable-test-framework \
		--without-glade-catalogdir \
		--enable-gtk-doc-pdf && \
	$(MAKE) -j ; \
	cd ..

_host/hicolor: _host $(srcdir)/$(hicolor_snapshot)
	cd _host ; \
	$(BZIP2) -dc $(abs_srcdir)/$(hicolor_snapshot) | $(TAR) xf - ; \
	cd ..

_host/minitheme: _host $(srcdir)/$(minitheme_snapshot)
	cd _host ; \
	$(BZIP2) -dc $(abs_srcdir)/$(minitheme_snapshot) | $(TAR) xf - ; \
	cd ..

clean-local:
	-rm -fr _host

$(INSTALLER): _host/docs/adg/adg.pdf _host/hicolor _host/minitheme $(srcdir)/build/adg.nsi
	$(MAKENSIS) -NOCD $(srcdir)/build/adg.nsi

mostlyclean-local:
	-rm $(INSTALLER)

endif


coverage: src/cpml/cpml-primitive.c.gcov src/adg/adg-canvas.c.gcov

src/cpml/cpml-primitive.c.gcov:
	$(MAKE) -C src/cpml $(AM_MAKEFLAGS) coverage

src/adg/adg-canvas.c.gcov:
	$(MAKE) -C src/adg $(AM_MAKEFLAGS) coverage

.PHONY: installer coverage


# Creating ChangeLog files from git log:
# idea stolen from cairo/build/Makefile.am.changelog
ChangeLog:
	$(AM_V_GEN)if test -d "$(abs_srcdir)/.git"; then \
	  ( cd "$(abs_srcdir)" && git log --stat > $@ ) ; \
	else \
	  echo ' *WARN  A git checkout is required to generate $@' ; \
	  touch $@ ; \
	fi

# Autogenerated text docs
README: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/README.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/README.xml

NEWS: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/NEWS.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/NEWS.xml

TODO: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/TODO.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/TODO.xml

CONTRIBUTING: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/CONTRIBUTING.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/CONTRIBUTING.xml

HACKING: $(xml2txt_stylesheet) $(abs_srcdir)/docs/adg/HACKING.xml
	$(xml2txt_command) $(abs_srcdir)/docs/adg/HACKING.xml
